# retinal-disease-classification

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: data_analysis.ipynb  model_architectures.ipynb
scripts/: animate_feature_maps.py  download_dataset.py  visualize_embeddings.py  visualize_feature_maps.py  visualize_gradcam.py  visualize_weights.py
src/: evaluate.py  inference.py  multimodel.py  pyproject.toml  requirements.txt  test.py  test_medsiglip.py  train.ipynb  train.py  train_colab.py  train_gradual_unfreeze_demo.py  train_medsiglip.py
src/dataloader/: data_loader.py  data_preprocessing.py  data_utils.py  download_dataset.py
src/models/: __init__.py  base_model.py  checkpoint.py  convnext.py  efficient_net.py  efficientnet.py  model_factory.py  model_utils.py  resnet.py  simple_model.py  vgg.py
src/scripts/: download_dataset.py  visualize_embeddings.py  visualize_feature_maps.py  visualize_gradcam.py  visualize_weights.py
src/tests/: test_model.py
src/trainer/: __init__.py  config.py  early_stopping.py  trainer.py
src/utils/: data_preprocessing.py  evaluate.py  helper.py  logger.py  model_utils.py  visualize_embeddings.py  visualize_gradcam.py  visualize_weights.py
