[project]
name = "retinal-disease-classifier"
version = "1.0.0"
description = "Retinal Disease Classification"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv.workspace]
members = [
    "src"
]

[tool.uv.sources]
retinal-disease-classification = { workspace = true }

[dependency-groups]
dev = [
    "retinal-disease-classification",
    "jupyterlab",
    "coverage",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "types-requests",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# for flat layout we need to explicitly list packages
packages = ["src"]

[tool.mypy]
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
exclude = []
explicit_package_bases = true
warn_no_return = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = false # keep this setting only for tests folder
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
indent-style = "space"

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = []
src = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
split-on-trailing-comma = false
