[project]
name = "retinal-disease-classification"
version = "0.1.0"
description = "Retinal disease classification Trainer"
requires-python = "==3.13.9"
dependencies = [
    "datasets",
    "kagglehub",
    "matplotlib",
    "numpy",
    "pandas",
    "torch",
    "torchvision",
    "tqdm",
    "wandb"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataloader", "models", "utils"]
exclude = ["test"]
