[project]
name = "retinal-disease-classification"
version = "0.1.0"
description = "Retinal disease classification Trainer"
requires-python = "==3.13.9"
dependencies = [
    "datasets",
    "focal_loss_torch",
    "grad-cam",
    "kagglehub",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
]

[project.optional-dependencies]
umap = ["umap-learn"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataloader", "models", "trainer", "utils"]
exclude = ["test"]
