[project]
name = "retinal-disease-classification"
version = "0.1.0"
description = "Retinal disease classification Trainer"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate",
    "datasets",
    "evaluate",
    "grad-cam",
    "kagglehub",
    "matplotlib",
    "numpy",
    "pandas",
    "pillow",
    "scikit-learn",
    "sentencepiece==0.2.1",
    "tensorboard",
    "tensorflow",
    "torch",
    "torchvision",
    "tqdm",
    "transformers==4.57.6",
    "wandb",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataloader", "models", "trainer", "utils"]
exclude = ["test"]
